FIX: Fixed top border in iphoneX not covered by overlay

--- a/src/css/pages/_responsive-overlay.scss
+++ b/src/css/pages/_responsive-overlay.scss
@@ -1,7 +1,7 @@
 .responsive-overlay {
   display:none;
   background-color:var(--background);
-  position:absolute;
+  position:fixed;
   top:0;
   width:100vw;
   height:100vh;
